--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   width: 100%;
   height: 5rem;
   background-color: gray;
@@ -12,4 +12,4 @@
 
 .nav-search {
   flex: 1;
-}
+} */
